tests/baselines/reference/jsxFactoryIdentifierWithAbsentParameter(strict=true).errors.txt
test.tsx(9,16): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
test.tsx(9,17): error TS2552: Cannot find name 'createElement'. Did you mean 'frameElement'?


==== test.tsx (2 errors) ====
    declare module JSX {
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render() {
            return <div />;
                   ~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
                    ~~~
!!! error TS2552: Cannot find name 'createElement'. Did you mean 'frameElement'?
!!! related TS2728 lib.dom.d.ts:--:--: 'frameElement' is declared here.
        }
    }
    